--- a/deployment/values.dev.yaml
+++ b/deployment/values.dev.yaml
@@ -45,7 +45,9 @@ auth:
     db_host: localhost
     db_port: "5432"
     db_name: auth_db
-
+  securityContext:
+    enabled: false
+    
 profile:
   enabled: true
   namespace: app
@@ -71,6 +73,8 @@ profile:
     limits:
       memory: "256Mi"
       cpu: "400m"
+  securityContext:
+    enabled: false
 
 notificationJob:
   enabled: true
