--- a/deployment/Makefile
+++ b/deployment/Makefile
@@ -61,6 +61,20 @@ dev: check-helm clean-output
 		echo "# Notification job not enabled or empty" > $(OUTPUT_DIR)/notification-job.yaml; \
 		echo "✓ Generated: $(OUTPUT_DIR)/notification-job.yaml (empty - notification job disabled)"; \
 	fi
+	@echo "Generating keycloak-config.yaml..."
+	@if $(HELM) template $(RELEASE_NAME) . --values ./$(VALUES_FILE) --show-only templates/keycloak-config.yaml > $(OUTPUT_DIR)/keycloak-config.yaml 2>/dev/null && [ -s $(OUTPUT_DIR)/keycloak-config.yaml ]; then \
+		echo "✓ Generated: $(OUTPUT_DIR)/keycloak-config.yaml"; \
+	else \
+		echo "# Keycloak service not enabled or empty" > $(OUTPUT_DIR)/keycloak-config.yaml; \
+		echo "✓ Generated: $(OUTPUT_DIR)/keycloak-config.yaml (empty - keycloak disabled)"; \
+	fi
+	@echo "Generating keycloak-service.yaml..."
+	@if $(HELM) template $(RELEASE_NAME) . --values ./$(VALUES_FILE) --show-only templates/keycloak-service.yaml > $(OUTPUT_DIR)/keycloak-service.yaml 2>/dev/null && [ -s $(OUTPUT_DIR)/keycloak-service.yaml ]; then \
+		echo "✓ Generated: $(OUTPUT_DIR)/keycloak-service.yaml"; \
+	else \
+		echo "# Keycloak service not enabled or empty" > $(OUTPUT_DIR)/keycloak-service.yaml; \
+		echo "✓ Generated: $(OUTPUT_DIR)/keycloak-service.yaml (empty - keycloak disabled)"; \
+	fi
 	@echo ""
 	@echo "To deploy:"
 	@echo "  kubectl apply -f $(OUTPUT_DIR)/auth-config.yaml"
@@ -70,6 +84,8 @@ dev: check-helm clean-output
 	@echo "  kubectl apply -f $(OUTPUT_DIR)/ingress-deploy.yaml"
 	@echo "  kubectl apply -f $(OUTPUT_DIR)/notification-config.yaml"
 	@echo "  kubectl apply -f $(OUTPUT_DIR)/notification-job.yaml"
+	@echo "  kubectl apply -f $(OUTPUT_DIR)/keycloak-config.yaml"
+	@echo "  kubectl apply -f $(OUTPUT_DIR)/keycloak-service.yaml"
 	@echo "  or"
 	@echo "  helm install $(RELEASE_NAME) . --values ./$(VALUES_FILE) --namespace $(NAMESPACE) --create-namespace"
 
@@ -117,6 +133,12 @@ validate: dev
 	fi
 	@if [ -s $(OUTPUT_DIR)/notification-job.yaml ] && ! grep -q "not enabled\|empty" $(OUTPUT_DIR)/notification-job.yaml; then \
 		kubectl --dry-run=client -f $(OUTPUT_DIR)/notification-job.yaml apply > /dev/null 2>&1 && echo "✓ notification-job.yaml validation passed" || echo "✗ notification-job.yaml validation failed"; \
+	fi
+	@if [ -s $(OUTPUT_DIR)/keycloak-config.yaml ] && ! grep -q "not enabled\|empty" $(OUTPUT_DIR)/keycloak-config.yaml; then \
+		kubectl --dry-run=client -f $(OUTPUT_DIR)/keycloak-config.yaml apply > /dev/null 2>&1 && echo "✓ keycloak-config.yaml validation passed" || echo "✗ keycloak-config.yaml validation failed"; \
+	fi
+	@if [ -s $(OUTPUT_DIR)/keycloak-service.yaml ] && ! grep -q "not enabled\|empty" $(OUTPUT_DIR)/keycloak-service.yaml; then \
+		kubectl --dry-run=client -f $(OUTPUT_DIR)/keycloak-service.yaml apply > /dev/null 2>&1 && echo "✓ keycloak-service.yaml validation passed" || echo "✗ keycloak-service.yaml validation failed"; \
 	fi
 
 ## install: install the chart using Helm
