--- a/deployment/values.yaml
+++ b/deployment/values.yaml
@@ -3,7 +3,7 @@
 
 # Global settings
 global:
-  namespace: app
+  namespace: ingress
 
 # Ingress configuration (centralized)
 ingress:
@@ -33,6 +33,15 @@ ingress:
           backend:
             serviceName: profile-service
             servicePort: 80
+    # Keycloak service routes (cross-namespace: service in keycloak namespace)
+    - host: keycloak.example.com
+      paths:
+        - path: /
+          pathType: Prefix
+          backend:
+            serviceName: keycloak-service
+            servicePort: 8080
+            serviceNamespace: keycloak  # Traefik supports cross-namespace services
     # Or use path-based routing on same host
     # - host: api.example.com
     #   paths:
@@ -220,3 +229,88 @@ notificationJob:
       drop:
         - ALL
 
+# Keycloak service configuration
+keycloak:
+  enabled: true
+  namespace: keycloak
+  replicas: 1
+  image:
+    repository: quay.io/keycloak/keycloak
+    tag: 25.0.6  # หรือใช้ latest
+    pullPolicy: IfNotPresent
+  service:
+    name: keycloak-service
+    type: ClusterIP
+    port: 8080
+    targetPort: 8080
+  configmaps:
+    # Keycloak configuration
+    proxy: edge  # edge, reencrypt, passthrough, none
+    hostname_strict: "false"
+    hostname_strict_https: "false"
+  secrets:
+    # Database configuration
+    db_vendor: postgres
+    db_user: keycloak
+    db_password: keycloak_password
+    db_host: postgresql.postgres.svc.cluster.local  # เปลี่ยนตาม PostgreSQL service ของคุณ
+    db_port: "5432"
+    db_name: keycloak
+    # Admin credentials
+    admin_user: admin
+    admin_password: admin  # เปลี่ยนเป็นรหัสผ่านที่ปลอดภัย
+  # Keycloak specific environment variables
+  env:
+    - name: KC_HEALTH_ENABLED
+      value: "true"
+    - name: KC_METRICS_ENABLED
+      value: "true"
+    - name: KC_HTTP_ENABLED
+      value: "true"
+    - name: KC_PROXY
+      value: "edge"
+  command:
+    - start
+    - --optimized
+  resources:
+    requests:
+      memory: "512Mi"
+      cpu: "500m"
+    limits:
+      memory: "1Gi"
+      cpu: "1000m"
+  # Health checks
+  healthCheck:
+    enabled: true
+    livenessProbe:
+      httpGet:
+        path: /health/live
+        port: 8080
+      initialDelaySeconds: 60
+      periodSeconds: 10
+      timeoutSeconds: 5
+      failureThreshold: 3
+      successThreshold: 1
+    readinessProbe:
+      httpGet:
+        path: /health/ready
+        port: 8080
+      initialDelaySeconds: 60
+      periodSeconds: 10
+      timeoutSeconds: 5
+      failureThreshold: 3
+      successThreshold: 1
+  # Ingress configuration for Keycloak (using centralized ingress instead)
+  ingress:
+    enabled: false  # Disabled - using centralized ingress in ingress namespace
+  # Security context
+  securityContext:
+    enabled: true
+    runAsNonRoot: true
+    runAsUser: 1000
+    fsGroup: 1000
+    allowPrivilegeEscalation: false
+    readOnlyRootFilesystem: false
+    capabilities:
+      drop:
+        - ALL
