--- a/deployment/kubernetes/dev/notification-job.yaml
+++ b/deployment/kubernetes/dev/notification-job.yaml
@@ -72,10 +72,14 @@ spec:
               requests:
                 cpu: 100m
                 memory: 64Mi
+            securityContext:
+              runAsNonRoot: true
+              runAsUser: 1000
+              capabilities:
+                drop:
+                - ALL
           securityContext:
             runAsNonRoot: true
             runAsUser: 1000
             fsGroup: 1000
-            capabilities:
-              drop:
-              - ALL
+            # capabilities must be at container level, not pod level
