--- a/deployment/kubernetes/dev/keycloak-service.yaml
+++ b/deployment/kubernetes/dev/keycloak-service.yaml
@@ -63,7 +63,7 @@ spec:
       - name: keycloak
         image: quay.io/keycloak/keycloak:25.0.6
         imagePullPolicy: IfNotPresent
-        command:
+        args:
           - start
           - --optimized
         ports:
