--- a/deployment/values.yaml
+++ b/deployment/values.yaml
@@ -268,7 +268,7 @@ keycloak:
     - name: KC_HTTP_ENABLED
       value: "true"
     # KC_PROXY is set from ConfigMap, not from env to avoid duplication
-  command:
+  args:
     - start
     - --optimized
   resources:
