--- a/deployment/kubernetes/dev/keycloak-service.yaml
+++ b/deployment/kubernetes/dev/keycloak-service.yaml
@@ -122,6 +122,10 @@ spec:
           value: "true"
         - name: KC_HTTP_ENABLED
           value: "true"
+        - name: KC_HOSTNAME_STRICT
+          value: "false"
+        - name: KC_HOSTNAME_STRICT_HTTPS
+          value: "false"
         # Proxy configuration from ConfigMap
         - name: KC_PROXY
           valueFrom:
