--- a/deployment/values.dev.yaml
+++ b/deployment/values.dev.yaml
@@ -1,6 +1,6 @@
 # Global settings
 global:
-  namespace: ingress
+  namespace: app
 
 # Centralized Ingress configuration
 ingress:
@@ -26,14 +26,6 @@ ingress:
           backend:
             serviceName: profile-service
             servicePort: 80
-    - host: keycloak.local
-      paths:
-        - path: /
-          pathType: Prefix
-          backend:
-            serviceName: keycloak-service
-            servicePort: 8080
-            serviceNamespace: keycloak  # Traefik supports cross-namespace services
 
 auth:
   enabled: true
@@ -162,9 +154,19 @@ keycloak:
   args:
     - start
     - --optimized
-  # Ingress configuration for Keycloak (using centralized ingress instead)
+  # Ingress configuration for Keycloak (separate ingress in keycloak namespace)
   ingress:
-    enabled: false  # Disabled - using centralized ingress in ingress namespace
+    enabled: true
+    className: traefik
+    host: keycloak.local
+    path: /
+    pathType: Prefix
+    annotations:
+      traefik.ingress.kubernetes.io/rule-type: PathPrefix
+    middlewares: []
+    tls:
+      enabled: false
+      secretName: keycloak-tls-secret
   # Health checks
   healthCheck:
     enabled: false
