--- a/deployment/templates/keycloak-service.yaml
+++ b/deployment/templates/keycloak-service.yaml
@@ -67,24 +67,14 @@ spec:
           protocol: TCP
         env:
         # Database configuration for Keycloak 25.0.6
-        # Use separate host, port, database variables (Keycloak will construct URL automatically)
+        # Use KC_DB_URL directly (Keycloak 25.0.6 requires full JDBC URL)
         - name: KC_DB
           value: postgres
-        - name: KC_DB_URL_HOST
+        - name: KC_DB_URL
           valueFrom:
             secretKeyRef:
               name: {{ .Values.keycloak.service.name }}-secrets
-              key: db_host
-        - name: KC_DB_URL_PORT
-          valueFrom:
-            secretKeyRef:
-              name: {{ .Values.keycloak.service.name }}-secrets
-              key: db_port
-        - name: KC_DB_URL_DATABASE
-          valueFrom:
-            secretKeyRef:
-              name: {{ .Values.keycloak.service.name }}-secrets
-              key: db_name
+              key: db_url
         - name: KC_DB_USERNAME
           valueFrom:
             secretKeyRef:
