--- a/deployment/kubernetes/dev/keycloak-service.yaml
+++ b/deployment/kubernetes/dev/keycloak-service.yaml
@@ -64,8 +64,7 @@ spec:
         image: quay.io/keycloak/keycloak:25.0.6
         imagePullPolicy: IfNotPresent
         args:
-          - start
-          - --optimized
+          - start-dev
         ports:
         - containerPort: 8080
           name: http
@@ -112,6 +111,12 @@ spec:
           value: "false"
         - name: KC_HOSTNAME_STRICT_HTTPS
           value: "false"
+        - name: KC_DB_POOL_INITIAL_SIZE
+          value: "5"
+        - name: KC_DB_POOL_MIN_SIZE
+          value: "5"
+        - name: KC_DB_POOL_MAX_SIZE
+          value: "20"
         # Proxy configuration from ConfigMap
         - name: KC_PROXY
           valueFrom:
