--- a/deployment/kubernetes/dev/keycloak-service.yaml
+++ b/deployment/kubernetes/dev/keycloak-service.yaml
@@ -90,12 +90,14 @@ spec:
               name: keycloak-service-secrets
               key: db_password
         # Admin credentials
-        - name: KC_BOOTSTRAP_ADMIN_USERNAME
+        # For dev mode: use KEYCLOAK_ADMIN and KEYCLOAK_ADMIN_PASSWORD
+        # For production mode: use KC_BOOTSTRAP_ADMIN_USERNAME and KC_BOOTSTRAP_ADMIN_PASSWORD
+        - name: KEYCLOAK_ADMIN
           valueFrom:
             secretKeyRef:
               name: keycloak-service-secrets
               key: admin_user
-        - name: KC_BOOTSTRAP_ADMIN_PASSWORD
+        - name: KEYCLOAK_ADMIN_PASSWORD
           valueFrom:
             secretKeyRef:
               name: keycloak-service-secrets
