--- a/deployment/values.dev.yaml
+++ b/deployment/values.dev.yaml
@@ -151,6 +151,10 @@ keycloak:
       value: "false"
     - name: KC_HOSTNAME_STRICT_HTTPS
       value: "false"
+    - name: KC_HOSTNAME
+      value: "keycloak.local"
+    - name: KC_HTTP_RELATIVE_PATH
+      value: "/"
     - name: KC_DB_POOL_INITIAL_SIZE
       value: "5"
     - name: KC_DB_POOL_MIN_SIZE
