--- a/deployment/kubernetes/dev/keycloak-ingress.yaml
+++ b/deployment/kubernetes/dev/keycloak-ingress.yaml
@@ -13,6 +13,7 @@ metadata:
     app.kubernetes.io/version: "1.0"
     app.kubernetes.io/managed-by: Helm
   annotations:
+    traefik.ingress.kubernetes.io/redirect-to-https: "false"
     traefik.ingress.kubernetes.io/rule-type: PathPrefix
 spec:
   ingressClassName: traefik
