--- a/deployment/values.dev.yaml
+++ b/deployment/values.dev.yaml
@@ -125,7 +125,7 @@ keycloak:
     targetPort: 8080
   configmaps:
     # Keycloak configuration
-    proxy: none  # edge, reencrypt, passthrough, none - none for dev mode without proxy
+    proxy: edge  # edge works best with Traefik Ingress
     hostname_strict: "false"
     hostname_strict_https: "false"
   secrets:
@@ -151,15 +151,13 @@ keycloak:
       value: "false"
     - name: KC_HOSTNAME_STRICT_HTTPS
       value: "false"
-    # Remove hostname and proxy settings for dev mode - let Keycloak handle it directly
-    # - name: KC_HOSTNAME
-    #   value: "keycloak.local"
-    # - name: KC_HTTP_RELATIVE_PATH
-    #   value: "/"
-    # - name: KC_PROXY_ADDRESS_FORWARDING
-    #   value: "true"
-    # - name: KC_PROXY_HEADERS
-    #   value: "xforwarded"
+    # Keycloak configuration for access through Ingress
+    - name: KC_HOSTNAME
+      value: "keycloak.local"
+    - name: KC_HTTP_RELATIVE_PATH
+      value: "/"
+    - name: KC_PROXY_ADDRESS_FORWARDING
+      value: "true"
     - name: KC_DB_POOL_INITIAL_SIZE
       value: "5"
     - name: KC_DB_POOL_MIN_SIZE
@@ -182,6 +180,7 @@ keycloak:
       traefik.ingress.kubernetes.io/rule-type: PathPrefix
       traefik.ingress.kubernetes.io/redirect-to-https: "false"
       traefik.ingress.kubernetes.io/forward-auth-headers: "true"
+      traefik.ingress.kubernetes.io/entrypoints: "web"
     middlewares: []
     tls:
       enabled: false
