--- a/deployment/kubernetes/dev/keycloak-service.yaml
+++ b/deployment/kubernetes/dev/keycloak-service.yaml
@@ -113,6 +113,12 @@ spec:
           value: "false"
         - name: KC_HOSTNAME_STRICT_HTTPS
           value: "false"
+        - name: KC_HOSTNAME
+          value: "keycloak.local"
+        - name: KC_HTTP_RELATIVE_PATH
+          value: "/"
+        - name: KC_PROXY_ADDRESS_FORWARDING
+          value: "true"
         - name: KC_DB_POOL_INITIAL_SIZE
           value: "5"
         - name: KC_DB_POOL_MIN_SIZE
