--- a/deployment/Makefile
+++ b/deployment/Makefile
@@ -194,3 +194,9 @@ clean-output:
 all: lint dev validate
 	@echo ""
 	@echo "✓ All tasks completed successfully"
+
+.PHONY: keycloak
+build-keycloak:
+	@echo "Building keycloak image..."
+	@docker build -t ctmimage-keycloak:26.4.7-postgres -f deployment/ctmimage/Dockerfile.kc .
+	@echo "✓ Keycloak image built successfully"
