--- a/deployment/values.dev.yaml
+++ b/deployment/values.dev.yaml
@@ -114,8 +114,8 @@ keycloak:
   namespace: keycloak
   replicas: 2  # Production: use multiple replicas for HA
   image:
-    repository: quay.io/keycloak/keycloak
-    tag: 26.4.7  # หรือใช้ latest
+    repository: keycloak
+    tag: 26.4.7-postgres  # หรือใช้ latest
     pullPolicy: IfNotPresent
     # Note: Keycloak optimized build includes PostgreSQL driver by default
   service:
