--- a/deployment/kubernetes/dev/keycloak-service.yaml
+++ b/deployment/kubernetes/dev/keycloak-service.yaml
@@ -67,7 +67,7 @@ spec:
       containers:
       - name: keycloak
         image: keycloak:26.4.7-postgres
-        imagePullPolicy: IfNotPresent
+        imagePullPolicy: Never
         args:
           - start
           - --optimized
