--- a/deployment/Makefile
+++ b/deployment/Makefile
@@ -209,6 +209,9 @@ load-keycloak:
 	@echo "Loading keycloak image into k3s cluster..."
 	@docker save keycloak:26.4.7-postgres | sudo k3s ctr images import - || \
 		(docker save keycloak:26.4.7-postgres | sudo ctr -n k8s.io images import -)
+	@echo "Tagging image for k3s compatibility..."
+	@sudo k3s ctr images tag keycloak:26.4.7-postgres docker.io/library/keycloak:26.4.7-postgres || \
+		(sudo ctr -n k8s.io images tag keycloak:26.4.7-postgres docker.io/library/keycloak:26.4.7-postgres)
 	@echo "✓ Keycloak image loaded into k3s cluster"
 	@echo "Verify: sudo k3s ctr images list | grep keycloak"
 
