--- a/deployment/kubernetes/dev/keycloak-service.yaml
+++ b/deployment/kubernetes/dev/keycloak-service.yaml
@@ -48,8 +48,8 @@ spec:
     metadata:
       annotations:
         # Restart pods when image changes
-        checksum/image: a2V5Y2xvYWs6MjYu
-        image.repository: "keycloak"
+        checksum/image: ZG9ja2VyLmlvL2xp
+        image.repository: "docker.io/library/keycloak"
         image.tag: "26.4.7-postgres"
         # Restart pods when ConfigMap changes
         checksum/configmap: eyJob3N0bmFtZV9z
@@ -66,7 +66,7 @@ spec:
         # capabilities must be at container level, not pod level
       containers:
       - name: keycloak
-        image: keycloak:26.4.7-postgres
+        image: docker.io/library/keycloak:26.4.7-postgres
         imagePullPolicy: Never
         args:
           - start
