--- a/deployment/ctmimage/Dockerfile.kc
+++ b/deployment/ctmimage/Dockerfile.kc
@@ -1,2 +1,7 @@
 FROM quay.io/keycloak/keycloak:26.4.7
-RUN /opt/keycloak/bin/kc.sh build --db=postgres
+# Build optimized image with PostgreSQL driver and runtime configuration
+RUN /opt/keycloak/bin/kc.sh build \
+    --db=postgres \
+    --http-relative-path=/ \
+    --health-enabled=true \
+    --metrics-enabled=true
