--- a/deployment/kubernetes/dev/keycloak-service.yaml
+++ b/deployment/kubernetes/dev/keycloak-service.yaml
@@ -127,6 +127,8 @@ spec:
           value: "edge"
         - name: KC_PROXY_HEADERS
           value: "xforwarded"
+        - name: KC_HTTP_RELATIVE_PATH
+          value: "/"
         - name: KC_DB_POOL_INITIAL_SIZE
           value: "5"
         - name: KC_DB_POOL_MIN_SIZE
