--- a/deployment/ctmimage/Dockerfile.kc
+++ b/deployment/ctmimage/Dockerfile.kc
@@ -1,24 +1,24 @@
-# FROM quay.io/keycloak/keycloak:26.4.7
-# # Build optimized image with PostgreSQL driver and runtime configuration
-# RUN /opt/keycloak/bin/kc.sh build \
-#     --db=postgres \
-#     --http-relative-path=/ \
-#     --health-enabled=true \
-#     --metrics-enabled=true
+FROM quay.io/keycloak/keycloak:26.4.7
+# Build optimized image with PostgreSQL driver and runtime configuration
+RUN /opt/keycloak/bin/kc.sh build \
+    --db=postgres \
+    --http-relative-path=/auth \
+    --health-enabled=true \
+    --metrics-enabled=true
 
-FROM quay.io/keycloak/keycloak:26.4.7 AS builder
+# FROM quay.io/keycloak/keycloak:26.4.7 AS builder
 
-# Enable health and metrics support
-ENV KC_HEALTH_ENABLED=true
-ENV KC_METRICS_ENABLED=true
+# # Enable health and metrics support
+# ENV KC_HEALTH_ENABLED=true
+# ENV KC_METRICS_ENABLED=true
 
-# Configure a database vendor
-ENV KC_DB=postgres
+# # Configure a database vendor
+# ENV KC_DB=postgres
 
-WORKDIR /opt/keycloak
-# for demonstration purposes only, please make sure to use proper certificates in production instead
-RUN keytool -genkeypair -storepass password -storetype PKCS12 -keyalg RSA -keysize 2048 -dname "CN=server" -alias server -ext "SAN:c=DNS:localhost,IP:127.0.0.1" -keystore conf/server.keystore
-RUN /opt/keycloak/bin/kc.sh build
+# WORKDIR /opt/keycloak
+# # for demonstration purposes only, please make sure to use proper certificates in production instead
+# RUN keytool -genkeypair -storepass password -storetype PKCS12 -keyalg RSA -keysize 2048 -dname "CN=server" -alias server -ext "SAN:c=DNS:localhost,IP:127.0.0.1" -keystore conf/server.keystore
+# RUN /opt/keycloak/bin/kc.sh build
 
 # FROM quay.io/keycloak/keycloak:26.4.7
 # COPY --from=builder /opt/keycloak/ /opt/keycloak/
