--- a/deployment/values.dev.yaml
+++ b/deployment/values.dev.yaml
@@ -158,7 +158,7 @@ keycloak:
     - name: KC_PROXY_HEADERS
       value: "xforwarded"
     - name: KC_HTTP_RELATIVE_PATH
-      value: "/"
+      value: "/auth"
     - name: KC_DB_POOL_INITIAL_SIZE
       value: "5"
     - name: KC_DB_POOL_MIN_SIZE
